// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadList matches the last snapshot 1`] = `
<div
  data-stylename="thread-list"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="closeMessages"
    >
      <CloseMessages />
    </div>
    <Link
      to="/messages/new"
    >
      <Button
        data-stylename="new-message"
        label="New Message"
      />
    </Link>
    <div
      data-stylename="header-text"
    >
      Messages
    </div>
  </div>
  <div
    data-stylename="search"
  >
    <TextInput
      onChange={[Function]}
      placeholder="Search for people..."
    />
  </div>
  <ul
    data-stylename="list"
    id="thread-list-list"
  >
    <div
      data-stylename="no-conversations"
    >
      You have no active conversations
    </div>
  </ul>
  <ScrollListener
    elementId="thread-list-list"
  />
</div>
`;

exports[`ThreadListItem matches the last snapshot 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
          "la.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="Jo and La"
      />
      <div
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with 2 participants 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="Jo"
      />
      <div
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with just you 1`] = `
<li
  data-stylename="list-item"
>
  <Link
    to="/messages/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "ra.png",
        ]
      }
    />
    <div
      data-stylename="li-center-content"
    >
      <ThreadNames
        names="You"
      />
      <div
        data-stylename="thread-message-text"
      />
    </div>
    <div
      data-stylename="li-right-content"
    >
      <div
        data-stylename="message-time"
      />
    </div>
  </Link>
</li>
`;
